--- a/client/src/pages/catalog/catalogmodificado.css
+++ b/client/src/pages/catalog/catalogmodificado.css
@@ -5,10 +5,35 @@
     justify-content: center;
 }
 .catalog--main-row{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 100%; */
+
+    grid-gap: -100%;
+
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 70px 70px;
+    background-color: #2196F3;
+    padding: 10px;
 }
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    /* grid-gap: 70px 70px; */
+    /* background-color: #2196F3; */
+    padding: 10px;
+  }
+
+  
+.grid-container > div {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
 .catalog--main-col-menu-box{
     margin-top: 1em;
     margin-left: 1em;
@@ -16,6 +41,7 @@
     display: flex;
     flex-direction: column;
     width: 20em;
+    
     
 }
 .catalog--main-col-menu-box h2{
@@ -49,13 +75,13 @@
     transition: all 0.3s ease-in ;
     
 }
-.catalog--main-col{
+/* .catalog--main-col{
     display: flex;
     width: 100%;
     justify-content: center;
     flex-wrap: wrap;
  
-}
+} */
 
 @media(max-width:1000px){
     .catalog--main-row{
@@ -71,4 +97,10 @@
     .catalog--main{
     margin-top: 9em;
     }
+}
+
+
+.grid{
+    align-items: center;
+    flex-direction:row-reverse;
 }
