--- a/client/src/pages/catalog/catalog.css
+++ b/client/src/pages/catalog/catalog.css
@@ -30,21 +30,21 @@
   
 .grid-container > div {
     /* background-color: rgba(255, 255, 255, 0.8); */
-    text-align: center;
+    text-align: left;
     padding: 20px 0;
     font-size: 30px;
   }
 .catalog--main-col-menu-box{
     margin-top: 1em;
     margin-left: 1em;
-
+    min-width: 160px;
     display: flex;
     flex-direction: column;
-    width: 20em;
+    width: 1em;
     
 }
-.catalog--main-col-menu-box h2{
-    text-align: center;
+.catalog--main-col-menu-box h3{
+    text-align: left;
     padding-top: 1em;
 }
 .catalog--main-col-menu-box form{
@@ -53,19 +53,18 @@
     width: 100%;
 }
 .button-filter{
-   
-    border-radius: 2em;
-    /* cursor: pointer; */
+   text-align: left;
+    cursor: pointer;
     /* width: 65%; */
     /* font-family: 'Oxanium' cursive; */
-    
-    border: 3px solid white;
+    margin-bottom: 1px;
 
 }
 .button-filter:hover{
-    border: 3px solid rgb(234, 50, 111);
+    /* border: 3px solid rgb(234, 50, 111); */
     border-radius: 0.2em;
     transition: border 0.3s ease-in;
+    color: orangered;
 }
 .button-filter:active {
     border: 3px solid rgba(146, 46, 133, 0);
